# nanoWeb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.sh
example/application/: CMakeLists.txt  main.cc
example/basic/: CMakeLists.txt  client.cc  server.cc
example/basic_html/: client.js  index.html
example/hello_world/: application.ml  index.html  nanoWeb.js  nanoWeb.js.mem  tree.ml
example/render/: index.html  render.js
src/client/: CMakeLists.txt  atlas.h  client_app.cc  client_app.h  communication.cc  communication.h  compatibility.cc  compatibility_desktop.cc  compatibility_emscripten.cc  context.cc  context.h  font.cc  font.h  font_ll.cc  render.cc  render.h  vector.h  vertex.cc
src/protocol/: protocol.h
src/render/: CMakeLists.txt  application.cc  application.h  atlas.cc  atlas.h  compatibility.cc  compatibility.h  compatibility_desktop.cc  compatibility_emscripten.cc  context.cc  context.h  font.cc  font.h  font_ll.h  main.cc  render.cc  render.h  vertex.cc  vertex.h
src/server/: CMakeLists.txt  application.cc  application.h  main.cc  server.cc  server.h  server_app.cc  server_app.h
src/util/: func_size.py  svg_path_to_commands.py
src/web/: CMakeLists.txt  action.cc  action.h  application.cc  application.h  compatibility.cc  compatibility.h  compatibility_desktop.cc  compatibility_emscripten.cc  context.cc  context.h  definition_common.h  input.cc  input.h  main.cc  main.h  ml_parser.cc  ml_parser.h  properties.cc  properties.h  render.cc  render.h  reserved_words.cc  reserved_words.h  string_manager.cc  string_manager.h  type_widget.cc  type_widget.h  types.cc  types.h  util.cc  util.h  vector.h  widget.cc  widget.h  widget_application.cc  widget_application.h  widget_button.cc  widget_button.h  widget_layout.cc  (+7 more)
test/: test.cc  test_action.cc  test_application.cc  test_parser.cc
test/client/: CMakeLists.txt  test_atlas.cc
test/render/: CMakeLists.txt  test_atlas.cc
test/web/: CMakeLists.txt  test_action.cc
web/template/: index.html  nanoWeb.js  nanoWeb.js.mem
